update test cases